syntax = "proto3";

package api;

option go_package = "github.com/EbumbaE/FinTgBot/libs/api";

import "google/protobuf/wrappers.proto";

enum Status {
    SUCCESS = 0;
    FAIL = 1;
}

message SendMessageRequest {
    google.protobuf.Int64Value id = 1;
    Status status = 2;
    string text = 3;
    int64  userID = 4;
}

message SendMessageResponse {
    google.protobuf.Int64Value id = 1;
    Status status = 2;
    string text = 3;
    int64  userID = 4;
}

service Sender {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}
  